# labyrinth

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Eigen.cmake  LLVM.cmake  get-cpm.cmake
include/labyrinth/: Flattening.h  GlobalsEncryption.h  Mba.h  MbaUtils.h  Registry.h  Utils.h
src/: Flattening.cpp  GlobalsEncryption.cpp  Mba.cpp  MbaUtils.cpp  Registry.cpp
